--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -11,28 +11,28 @@
     "typegen": "sanity typegen generate"
   },
   "dependencies": {
-    "@sanity/client": "^6.27.2",
+    "@sanity/client": "^7.2.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/uuid": "^3.0.2",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "date-fns": "^3.6.0",
-    "next": "^15.1.6",
-    "next-sanity": "^9.8.42",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sanity": "^3.74.0",
+    "next": "^15.3.2",
+    "next-sanity": "^9.11.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sanity": "^3.88.3",
     "sonner": "^1.7.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "typescript": "5.6.3",
-    "eslint": "^8.57.0",
-    "@types/react-dom": "^18.3.5",
+    "typescript": "^5.8.3",
+    "eslint": "^9.27.0",
+    "@types/react-dom": "^19.1.5",
     "@types/node": "^20.17.17",
-    "@types/react": "^18.3.18",
-    "eslint-config-next": "^15.1.6",
+    "@types/react": "^19.1.4",
+    "eslint-config-next": "^15.3.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
   }
