--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -43,6 +43,9 @@ jobs:
           node-version: "20"
           cache: "pnpm"
 
+      - name: Install packages
+        run: pnpm install --frozen-lockfile
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
