Use build command

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "description": "Next.js + Sanity: A Powerful Website Starter with Real-time Visual Editing",
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
-    "dev:next": "npm run dev --workspace=nextjs-app",
-    "dev:studio": "npm run dev --workspace=studio",
+    "dev:next": "pnpm run dev --workspace=nextjs-app",
+    "dev:studio": "pnpm run dev --workspace=studio",
+    "build": "pnpm run -r build",
     "import-sample-data": "cd studio && sanity dataset import sample-data.tar.gz --replace"
   },
   "keywords": [
